# on-this-day

./: .gitignore  LICENSE  README.md  render.yaml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: main.py  models.py
backend/app/routers/: today.py
backend/tests/: test_today_endpoint.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: types.ts
frontend/src/components/: Attribution.test.tsx  Attribution.tsx  EmptyState.test.tsx  EmptyState.tsx  ErrorState.test.tsx  ErrorState.tsx  EventList.test.tsx  EventList.tsx  LoadingState.test.tsx  LoadingState.tsx  TodayCard.test.tsx  TodayCard.tsx
frontend/src/hooks/: useTodayEvents.test.ts  useTodayEvents.ts
